virt01/manual/iot/nodered/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered-ingress
  namespace: iot
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: nodered.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: nodered-svc
            port:
              number: 1880
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nodered.k3s.nf.lab
    secretName: nodered-cert-tls
